Day4 Added all InputUtils to Input Added BoolStream Added MatrixUtils